--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@docusaurus/core": "2.0.0-alpha.58",
     "@docusaurus/module-type-aliases": "2.0.0-alpha.58",
     "@docusaurus/preset-classic": "2.0.0-alpha.58",
-    "@questdb/sql-syntax": "1.0.1",
+    "@questdb/sql-grammar": "1.0.1",
     "clsx": "1.1.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
