--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@docusaurus/module-type-aliases": "2.0.0-alpha.58",
     "@docusaurus/preset-classic": "2.0.0-alpha.58",
     "@questdb/sql-grammar": "1.0.4",
+    "@types/throttle-debounce": "2.1.0",
     "clsx": "1.1.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "throttle-debounce": "2.2.1",
     "typescript": "3.9.6"
   },
   "devDependencies": {
