--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "docusaurus start",
+    "prebuild": "node scripts/image-min.js",
     "build": "docusaurus build",
     "postbuild": "rimraf build/docs/__guidelines",
     "swizzle": "docusaurus swizzle",
@@ -12,16 +13,25 @@
   "dependencies": {
     "@docusaurus/core": "2.0.0-alpha.58",
     "@docusaurus/module-type-aliases": "2.0.0-alpha.58",
+    "@docusaurus/plugin-ideal-image": "2.0.0-alpha.58",
     "@docusaurus/preset-classic": "2.0.0-alpha.58",
-    "@questdb/sql-grammar": "1.0.4",
+    "@questdb/sql-grammar": "1.0.5",
     "@types/throttle-debounce": "2.1.0",
     "clsx": "1.1.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "throttle-debounce": "2.2.1",
-    "typescript": "3.9.6"
+    "typescript": "3.9.6",
+    "unist-util-visit": "2.0.3"
   },
   "devDependencies": {
+    "graceful-fs": "4.2.4",
+    "imagemin": "7.0.1",
+    "imagemin-gifsicle": "7.0.0",
+    "imagemin-mozjpeg": "9.0.0",
+    "imagemin-pngquant": "9.0.0",
+    "imagemin-svgo": "8.0.0",
+    "make-dir": "3.1.0",
     "rimraf": "3.0.2"
   },
   "browserslist": {
