--- a/package.json
+++ b/package.json
@@ -8,23 +8,40 @@
     "build": "docusaurus build",
     "postbuild": "rimraf build/docs/__guidelines",
     "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy"
+    "deploy": "docusaurus deploy",
+    "serve": "docusaurus serve"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-alpha.58",
-    "@docusaurus/module-type-aliases": "2.0.0-alpha.58",
-    "@docusaurus/plugin-ideal-image": "2.0.0-alpha.58",
-    "@docusaurus/preset-classic": "2.0.0-alpha.58",
+    "@docusaurus/core": "2.0.0-alpha.59",
+    "@docusaurus/module-type-aliases": "2.0.0-alpha.59",
+    "@docusaurus/plugin-ideal-image": "2.0.0-alpha.59",
+    "@docusaurus/preset-classic": "2.0.0-alpha.59",
     "@questdb/sql-grammar": "1.0.5",
+    "@types/react": "16.9.43",
     "@types/throttle-debounce": "2.1.0",
     "clsx": "1.1.1",
+    "date-fns": "2.15.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "throttle-debounce": "2.2.1",
-    "typescript": "3.9.6",
+    "typescript": "3.9.7",
     "unist-util-visit": "2.0.3"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "3.7.1",
+    "@typescript-eslint/parser": "3.7.1",
+    "eslint": "7.5.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-config-standard": "14.1.1",
+    "eslint-plugin-babel": "5.3.1",
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "3.1.4",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-react": "7.20.4",
+    "eslint-plugin-react-hooks": "4.0.8",
+    "eslint-plugin-standard": "4.0.1",
+    "fork-ts-checker-webpack-plugin": "5.0.11",
     "graceful-fs": "4.2.4",
     "imagemin": "7.0.1",
     "imagemin-gifsicle": "7.0.0",
@@ -32,6 +49,8 @@
     "imagemin-pngquant": "9.0.0",
     "imagemin-svgo": "8.0.0",
     "make-dir": "3.1.0",
+    "node-fetch": "2.6.0",
+    "prettier": "2.0.5",
     "rimraf": "3.0.2"
   },
   "browserslist": {
