--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,10 +9,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
       - uses: actions/setup-node@v2-beta
         with:
           node-version: '12'
-        name: Check types + linting + build
+
+      - name: Check types + linting + build
         run: |
           yarn
           yarn build
