--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "imagemin": "FORCE=true node scripts/image-min.js",
     "start": "docusaurus start",
     "prebuild": "node scripts/image-min.js",
     "build": "docusaurus build",
@@ -42,16 +43,16 @@
     "eslint-plugin-react-hooks": "4.0.8",
     "eslint-plugin-standard": "4.0.1",
     "fork-ts-checker-webpack-plugin": "5.0.12",
+    "glob": "7.1.6",
     "graceful-fs": "4.2.4",
     "imagemin": "7.0.1",
     "imagemin-gifsicle": "7.0.0",
-    "imagemin-mozjpeg": "9.0.0",
-    "imagemin-pngquant": "9.0.0",
     "imagemin-svgo": "8.0.0",
     "make-dir": "3.1.0",
     "node-fetch": "2.6.0",
     "prettier": "2.0.5",
-    "rimraf": "3.0.2"
+    "rimraf": "3.0.2",
+    "sharp": "0.25.4"
   },
   "browserslist": {
     "production": [
