chore: improve performance - reduce bundle size

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,25 @@
     "noEmit": true,
     "noImplicitAny": false,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": "./",
+    "paths": {
+      "@theme/Button": [
+        "src/theme/Button"
+      ],
+      "@theme/Head": [
+        "src/theme/Head"
+      ],
+      "@theme/Image": [
+        "src/theme/Image"
+      ],
+      "@theme/useMetadataContext": [
+        "src/theme/useMetadataContext"
+      ],
+      "@theme/useWindowWidth": [
+        "src/theme/useWindowWidth"
+      ]
+    }
   },
   "include": ["src/", "types/"]
 }
