--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "serve": "docusaurus serve"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-alpha.62",
-    "@docusaurus/module-type-aliases": "2.0.0-alpha.62",
-    "@docusaurus/plugin-ideal-image": "2.0.0-alpha.62",
-    "@docusaurus/plugin-pwa": "2.0.0-alpha.62",
-    "@docusaurus/preset-classic": "2.0.0-alpha.62",
+    "@docusaurus/core": "2.0.0-alpha.63",
+    "@docusaurus/module-type-aliases": "2.0.0-alpha.63",
+    "@docusaurus/plugin-ideal-image": "2.0.0-alpha.63",
+    "@docusaurus/plugin-pwa": "2.0.0-alpha.63",
+    "@docusaurus/preset-classic": "2.0.0-alpha.63",
     "@questdb/sql-grammar": "1.0.5",
     "@tsconfig/docusaurus": "1.0.2",
     "@types/react": "16.9.49",
@@ -36,7 +36,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "4.0.1",
     "@typescript-eslint/parser": "4.0.1",
-    "eslint": "7.8.0",
+    "eslint": "7.8.1",
     "eslint-config-prettier": "6.11.0",
     "eslint-config-standard": "14.1.1",
     "eslint-plugin-babel": "5.3.1",
@@ -50,11 +50,11 @@
     "fork-ts-checker-webpack-plugin": "5.1.0",
     "glob": "7.1.6",
     "graceful-fs": "4.2.4",
-    "husky": ">=4",
+    "husky": "4.2.5",
     "imagemin": "7.0.1",
     "imagemin-gifsicle": "7.0.0",
     "imagemin-svgo": "8.0.0",
-    "lint-staged": "10.2.13",
+    "lint-staged": "10.3.0",
     "make-dir": "3.1.0",
     "node-fetch": "2.6.0",
     "prettier": "2.1.1",
