--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,7 @@
     "baseUrl": "./",
     "paths": {
       "@theme/Button": ["src/theme/Button"],
+      "@theme/CareerEmailUs": ["src/theme/CareerEmailUs"],
       "@theme/Image": ["src/theme/Image"],
       "@theme/useMetadataContext": ["src/theme/useMetadataContext"],
       "@theme/useWindowWidth": ["src/theme/useWindowWidth"]
