--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,7 @@
       "@theme/Button": ["src/theme/Button"],
       "@theme/CareerEmailUs": ["src/theme/CareerEmailUs"],
       "@theme/Image": ["src/theme/Image"],
+      "@theme/Screenshot": ["src/theme/Screenshot"],
       "@theme/useMetadataContext": ["src/theme/useMetadataContext"],
       "@theme/useWindowWidth": ["src/theme/useWindowWidth"]
     }
