--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,7 @@
       "@theme/Banner": ["src/theme/Banner"],
       "@theme/Button": ["src/theme/Button"],
       "@theme/CareerEmailUs": ["src/theme/CareerEmailUs"],
+      "@theme/PageLayout": ["src/theme/PageLayout"],
       "@theme/Screenshot": ["src/theme/Screenshot"],
       "@theme/useMetadataContext": ["src/theme/useMetadataContext"],
       "@theme/useWindowWidth": ["src/theme/useWindowWidth"]
