docs: health monitoring

--- a/package.json
+++ b/package.json
@@ -67,7 +67,11 @@
     "webpack-manifest-plugin": "2.2.0"
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
